# lib

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile.app  Dockerfile.dbt  Dockerfile.spark  Dockerfile.spark_app  README.md  build_spark_image.sh  clickhouse.env  docker-compose.yaml  entrypoint.sh  entrypoint_airflow_pipeline.sh  entrypoint_dbt_star.sh  entrypoint_kafka_pipeline.sh  entrypoint_spark_upload.sh  kafka_pipeline_pom.xml  pyproject.toml  spark_upload_pom.xml  start-airflow-pipeline-app.sh  start-airflow.sh  start-all.sh  start-clickhouse.sh  start-database.sh  start-dbt-star.sh  start-grafana.sh  start-kafka-pipeline-app.sh  start-kafka.sh  start-s3-ozone.sh  start-s3.sh  start-spark-app.sh  start-spark.sh
dbt/: dbt_star.py  install_dbt.sh  task.txt
dbt/sql/: init-tables.sql
dbt/star_schema/: dbt_project.yml
dbt/star_schema/models/: models.yml  sale_facts.sql
dbt/star_schema/snapshots/: customers_snapshot.sql  products_snapshot.sql
dependencies/: integrations.txt  simple-libs.txt  sql.txt  table-frameworks.txt
env/: database.env  database_docker.env  kafka.env  kafka_broker.env  s3.env  s3_docker.env  spark.env  tg.env
grafana/: .env  grafana.ini
grafana/dashboards/: data_analysis.json  query_analysis.json  web_logs.json
grafana/provisioning/datasources/: clickhouse.yaml
s3/: s3.json
src/airflow_dags/: file_upload.py
src/airflow_pipeline/: __main__.py  delivery_service.py  http_server.py  spark_service.py  sql_service.py  telegram_sevice.py
src/airflow_pipeline/data/: delivery_1.csv  delivery_2.csv  delivery_3.csv  delivery_4.csv  delivery_5.csv
src/airflow_pipeline/sql/: init-tables.sql
src/clickhouse/: __main__.py  clickhouse.env  log_analytic.py  query.py
src/clickhouse/sql/: clickhouse_queries.toml  create_log_table.sql  generate_data.sql  projections.sql  queries.sql  views.sql
src/data_warehouse/data_vault/: __main__.py  data_vault.py
src/data_warehouse/data_vault/sql/: vault_init.sql
src/data_warehouse/partition/: __main__.py  partition.py
src/data_warehouse/partition/sql/: init_partitions.sql  insert_data.sql  insert_data_procedure.sql  query_data.sql
src/data_warehouse/star/: __main__.py  star.py
src/data_warehouse/star/csv/: customers.csv  products.csv  sales.csv
src/data_warehouse/star/sql/: clean_sales_pre.sql  (+5 more)
src/database/: adbc_connection.py  clickhouse_connection.py  data_generation.py  data_generator.py  database_connection.py  database_setup.py  formatter.py
src/dbt_star/: __main__.py  sql_service.py  task.txt
src/dbt_star/sql/: init-data.sql  init-tables.sql  update-data.sql
src/dbt_star/star_schema/: .user.yml  dbt_project.yml  profiles.yml
src/kafka/: __main__.py  data_service.py  kafka_service.py  sql_service.py
src/kafka/data/: flights.csv
src/kafka/sql/: init-tables.sql
src/kafka_pipeline/: __main__.py  data_service.py  kafka_service.py  sql_service.py
src/kafka_pipeline/data/: flights.csv
src/kafka_pipeline/sql/: init-tables.sql
src/s3/: __main__.py
src/s3_upload/: __main__.py  etl_s3.py  iceberg_service.py  info.txt  product_service.py  results.txt  s3.env  s3.py  s3_manager.py  sql_service.py
src/s3_upload/sql/: init-data.sql  init-tables.sql
src/spark_upload/: __main__.py  product_service.py  spark_sevice.py  sql_service.py
src/spark_upload/data/: products.csv
src/spark_upload/sql/: init-tables.sql
(+6 files in other folders)
