[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_migrations"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
library = "library.lib:main"
star = "data_warehouse.star:main"
data_vault = "data_warehouse.data_vault:main"
partitions = "data_warehouse.partitions:main"
clickhouse = "clickhouse:main"
s3 = "s3_upload:main"
spark = "spark_upload:main"
kafka = "kafka_pipeline:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
airflow_pipeline = ["sql/*.sql", "data/*"]
kafka_pipeline = ["sql/*.sql", "data/*"]
spark_upload = ["sql/*.sql", "data/*"]
s3_upload = ["sql/*.sql"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
 