[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_migrations"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
library = "library.lib:main"
star = "data_warehouse.star:main"
data_vault = "data_warehouse.data_vault:main"
partitions = "data_warehouse.partitions:main"
clickhouse = "clickhouse:main"
s3 = "s3_upload:main"
dbt_star = "dbt_star:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dbt_star = ["sql/*.sql", "data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
